changement des textes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Blueprint: On Scroll Effect Layout</title>
-		<meta name="description" content="Blueprint: On Scroll Effect Layout" />
+		<meta name="description" content="1st February 2018: John Fitzgerald Kennedy" />
 		<meta name="keywords" content="on scroll, effect, slide in, layout, template, transition, javascript" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
@@ -22,8 +22,8 @@
 			<div id="cbp-so-scroller" class="cbp-so-scroller">
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Lemon drops</h2>
-						<p>Fruitcake toffee jujubes. Topping biscuit sesame snaps jelly caramels jujubes tiramisu fruitcake. Marzipan tart lemon drops chocolate sesame snaps jelly beans.</p>
+						<h2>J.F.K</h2>
+						<p>John Fitzgerald Kennedy, dit Jack Kennedy, souvent désigné par ses initiales JFK, né le 29 mai 1917 à Brookline (Massachusetts) et mort assassiné le 22 novembre 1963 à Dallas (Texas), est un homme d'État américain, 35e président des États-Unis. Entré en poste le 20 janvier 1961, il est, à 43 ans, le plus jeune président élu des États-Unis.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/1.jpg" alt="img01">
@@ -34,14 +34,14 @@
 						<img src="images/2.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Plum caramels</h2>
-						<p>Lollipop powder danish sugar plum caramels liquorice sweet cookie. Gummi bears caramels gummi bears candy canes cheesecake sweet roll icing dragée. Gummies jelly-o tart. Cheesecake unerdwear.com candy canes apple pie halvah chocolate tiramisu.</p>
+						<h2>Ladies and him</h2>
+						<p>John Kennedy est connu pour ses multiples maîtresses et conquêtes féminines, dont Marilyn Monroe en 1962, ainsi que Mary Pinchot Meyer (en) (épouse de Cord Meyer (en), haut fonctionnaire à la CIA) et Judith Campbell Exner, maîtresse simultanément de Kennedy et du parrain de la mafia de Chicago Sam Giancana ou encore Gunilla von Post, Marlene Dietrich.</p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Marzipan gingerbread</h2>
-						<p>Soufflé bonbon jelly cotton candy liquorice dessert jelly bear claw candy canes. Pudding halvah bonbon marzipan powder. Marzipan gingerbread sweet jelly.</p>
+						<h2>His Career</h2>
+						<p>Kennedy se déclare candidat pour succéder à Eisenhower le 2 janvier 1960. Dans sa déclaration de candidature, Kennedy insiste sur la nécessité d'un désarmement mondial, qualifiant la course aux armements de « fardeau ». La politique de Kennedy, appelée « Nouvelle Frontière », prévoit la détente envers l'URSS, l'envoi d'un homme sur la Lune, l'égalité des Noirs et des Blancs, la relance de l'économie, la lutte contre la pègre et l'arrêt de l'expansion communiste dans le monde. L'élection a lieu le 8 novembre 1960, Kennedy bat Nixon de seulement 120 000 voix.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/3.jpg" alt="img01">
@@ -52,14 +52,14 @@
 						<img src="images/4.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Carrot cake</h2>
-						<p>Sesame snaps sweet wafer danish. Chupa chups carrot cake icing donut halvah bonbon. Chocolate cake candy marshmallow pudding dessert marzipan jujubes sugar plum.</p>
+						<h2>Election</h2>
+						<p>En 1952, il est candidat au siège de sénateur avec le slogan : « Kennedy en fera plus pour le Massachusetts ». Avec l'appui de son père et de tout le clan familial, il réussit à battre son concurrent républicain, le sénateur sortant Henry Cabot Lodge Jr. en obtenant 51,5 % des voix. Cependant, il ne s'oppose pas au sénateur Joseph McCarthy, un ami de la famille, qui mène une campagne agressive dans le but d'extirper les prétendus espions communistes au sein du gouvernement.</p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Pudding lollipop</h2>
-						<p>Chupa chups pudding lollipop gummi bears gummies cupcake pie. Cookie cotton candy caramels. Oat cake dessert applicake. Sweet roll tiramisu sweet roll sweet roll.</p>
+						<h2>His life</h2>
+						<p>Quand son père s'installe à Londres, il visite l'Europe, en particulier l'Allemagne nazie, et s'assure les services d'un « nègre4 » pour rédiger son mémoire de fin d'études sur Neville Chamberlain et la participation britannique aux accords de Munich. Son mémoire est reçu avec mention et grâce au soutien financier de son père, est publié avec une introduction de Henry Luce, sous le titre Pourquoi l'Angleterre dormait. À 23 ans, Kennedy est ainsi l'auteur d'un relatif succès de librairie qui semble le destiner au journalisme.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/5.jpg" alt="img01">
@@ -70,8 +70,8 @@
 						<img src="images/6.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Soufflé bonbon</h2>
-						<p>Cake cotton candy lollipop. Cake croissant cheesecake candy sugar plum icing apple pie wafer. Pie sugar plum tiramisu tiramisu pie fruitcake candy icing. Candy icing gummies gummies cheesecake brownie lemon drops chocolate gingerbread.</p>
+						<h2>His life</h2>
+						<p>Son père est alors déconsidéré par sa position favorable à la négociation avec Hitler. Ce livre permet à son fils de paraître comme favorable à l'entrée en guerre des États-Unis. Il doit, en 1941, sous la pression de son père et du FBI, mettre fin à sa liaison avec Inga Arvad, une journaliste danoise mariée à Paul Fejos, ancienne miss Danemark qui a couvert les Jeux olympiques de Berlin en 1936. JFK est rappelé sur le continent en Caroline du Sud mais Inga le suit et ils continuent à se voir.</p>
 					</article>
 				</section>
 			</div>
