--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>1st February 2018: John Fitzgerald Kenned</title>
+		<title>1st February 2018: John Fitzgerald Kennedy</title>
 		<meta name="description" content="1st February 2018: John Fitzgerald Kennedy" />
 		<meta name="keywords" content="on scroll, effect, slide in, layout, template, transition, javascript" />
 		<meta name="author" content="Codrops" />
@@ -16,8 +16,8 @@
 	<body>
 		<div class="container">
 			<header class="clearfix">
-				<span>Blueprint <span class="bp-icon bp-icon-about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span>
-				<h1>On Scroll Effect Layout</h1>
+				<span>1st February 2018 <span class="bp-icon bp-icon-about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span>
+				<h1>John Fitzgerald Kennedy</h1>
 			</header>
 			<div id="cbp-so-scroller" class="cbp-so-scroller">
 				<section class="cbp-so-section">
